# flash-linear-attention-npu

./: .gitignore  CMakeLists.txt  README.md  Third_Party_Open_Source_Software_List.yaml  build.sh  classify_rule.yaml  install_deps.sh  version.cmake
chunk_gated_delta_rule/chunk_bwd_dqkwg/: README.md
chunk_gated_delta_rule/recurrent_gated_delta_rule/: CMakeLists.txt
chunk_gated_delta_rule/recurrent_gated_delta_rule/tests/: CMakeLists.txt
chunk_gated_delta_rule/recurrent_gated_delta_rule/tests/ut/: CMakeLists.txt
chunk_gated_delta_rule/recurrent_gated_delta_rule/tests/ut/op_host/: CMakeLists.txt  test_recurrent_gated_delta_rule_infershape.cpp  test_recurrent_gated_delta_rule_tiling.cpp
chunk_gated_delta_rule/recurrent_gated_delta_rule/tests/ut/op_host/op_api/: CMakeLists.txt  test_aclnn_recurrent_gated_delta_rule.cpp
chunk_gated_delta_rule/recurrent_gated_delta_rule/tests/ut/op_kernel/: CMakeLists.txt  test_recurrent_gated_delta_rule.cpp
cmake/: aclnn_ops_transformer.h.in  build_empty_package.cmake  config.cmake  custom_build.cmake  dependencies.cmake  func.cmake  func_examples.cmake  func_utest.cmake  makeself_built_in.cmake  obj_func.cmake  opbuild.cmake  package.cmake  rty_obj_func.cmake  static.cmake  symbol.cmake  ut.cmake  variables.cmake
cmake/modules/: FindOPBASE.cmake  Findaicpu.cmake  Findnnopbase.cmake  Findruntime.cmake
cmake/scripts/: get_soc_version.py  parse_changed_files.py  prepare.sh
common/: CMakeLists.txt
scripts/: check_build_dependencies.py  generate_version_info.py
tests/: test_config.yaml  test_soc_config.yaml
(+620 files in other folders)
